# cloudpipe

./: .gitignore  Makefile  README.md  buildspec.yml  pyproject.toml
.github/workflows/: drift-detect.yml  terraform-cd.yml  terraform-ci.yml
container/: Dockerfile  main.py
docs/: ARCHITECTURE.md  SECURITY.md
docs/requirements/: PRP.md
infrascope/: __init__.py  __main__.py  analyzer.py  cost_analysis.py  iam_blast_radius.py  plan_parser.py  policy_lint.py  pr_comment.py  security_score.py
policies/: iam_no_wildcard_resource.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/bootstrap/: main.tf
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf
