[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infrascope"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "parliament>=1.6",
    "setuptools<72",  # parliament needs pkg_resources, removed in setuptools 72+
    "PyGithub>=2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"infrascope/prompts/*" = ["E501"]
"infrascope/pr_comment.py" = ["E501"]  # markdown output strings
